k8sLuis/service 1.yml
apiVersion: v1
kind: Service
metadata:
  name: HabilitacionDelServicio
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80        # Puerto para el servicio
      targetPort: 80  # Puerto del contenedor en el despliegue
  type: ClusterIP
